<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2018 Darijo Barucic, Seventoes
  ~
  ~  Licensed under the MIT License
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NON-INFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView style="@style/ListHeaderText"
        android:id="@id/ingredients_title_text"
        android:background="@color/colorPrimary"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_margin="@dimen/default_space_medium"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <TextView style="@style/IngredientsSubHeaderText"
            android:text="@string/ingredients_title_name"
            android:gravity="start"
            android:layout_weight="2"/>

        <TextView style="@style/IngredientsSubHeaderText"
            android:text="@string/ingredients_title_quant"
            android:gravity="end"
            android:layout_weight="1"/>

        <TextView style="@style/IngredientsSubHeaderText"
            android:text="@string/ingredients_title_unit"
            android:gravity="end"
            android:layout_weight="1"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_space_tiny"
        android:background="@android:color/background_dark"/>

    <!-- Recycler-View displaying the results. -->
    <android.support.v7.widget.RecyclerView
        android:id="@id/ingredients_recycler"
        android:layout_width="match_parent"
        android:layout_height="@dimen/ingredients_list_height"
        android:scrollbars="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

</LinearLayout>