<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2018 Darijo Barucic, Seventoes
  ~
  ~  Licensed under the MIT License
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NON-INFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Video -->
    <android.support.v7.widget.CardView
        android:id="@id/cardview_details_player"
        style="@style/DetailsCardView"
        android:layout_height="0dp"
        android:layout_weight="1">

        <com.google.android.exoplayer2.ui.PlayerView
            android:id="@id/exo_player_steps"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:padding="@dimen/default_space_medium" />

        <ImageView
            android:id="@id/details_player_img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="@dimen/default_space_medium"
            android:contentDescription="@string/steps_image_cd"
            android:gravity="center"
            android:scaleType="fitCenter" />
    </android.support.v7.widget.CardView>

    <!-- Description -->
    <android.support.v7.widget.CardView
        android:id="@id/cardview_details_desc"
        style="@style/DetailsCardView"
        android:layout_height="0dp"
        android:layout_weight="0.5">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@id/text_description_steps"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_space_large"
                android:gravity="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.SearchResult.Subtitle"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_details_description" />

        </ScrollView>
    </android.support.v7.widget.CardView>

    <!-- Navigation -->
    <LinearLayout
        android:id="@id/details_nav_linlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_margin="@dimen/default_space_large"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView
            style="@style/DetailsCardView"
            android:layout_width="wrap_content">

            <ImageView
                android:id="@id/details_previous_img"
                style="@style/ImageNavDetails"
                android:contentDescription="@string/details_nav_prev_cd"
                android:scaleX="-1"
                app:srcCompat="@drawable/ic_arrow_right" />
        </android.support.v7.widget.CardView>

        <TextView
            android:id="@id/details_nav_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/default_space_large"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
            android:textStyle="bold" />

        <android.support.v7.widget.CardView
            style="@style/DetailsCardView"
            android:layout_width="wrap_content">

            <ImageView
                android:id="@id/details_next_img"
                style="@style/ImageNavDetails"
                android:contentDescription="@string/details_nav_next_cd"
                app:srcCompat="@drawable/ic_arrow_right" />
        </android.support.v7.widget.CardView>

    </LinearLayout>
</LinearLayout>